--- a/custom_components/hyxi_cloud/translations/nl.json
+++ b/custom_components/hyxi_cloud/translations/nl.json
@@ -3,25 +3,25 @@
     "step": {
       "user": {
         "title": "Verbinden met HYXi Cloud",
-        "description": "Voer uw Open API-inloggegevens in. U kunt deze genereren op het [HYXiPOWER Ontwikkelaarsplatform]({link}).",
+        "description": "Voer uw Open API-gegevens in. U kunt deze genereren op het [HYXiPOWER Developer Platform]({link}).",
         "data": {
-          "access_key": "Toegangssleutel (AK)",
-          "secret_key": "Geheime sleutel (SK)"
+          "access_key": "Access Key (AK)",
+          "secret_key": "Secret Key (SK)"
         }
       },
       "reauth_confirm": {
         "title": "HYXi Cloud opnieuw verifiëren",
-        "description": "Uw Toegangssleutel of Geheime sleutel is niet langer geldig. Voer uw nieuwe inloggegevens in om de zonnepanelen weer te monitoren. U vindt deze op het [HYXiPOWER Ontwikkelaarsplatform]({link}).",
+        "description": "Uw Access Key of Secret Key is niet meer geldig. Voer nieuwe gegevens in om de monitoring te hervatten. U vindt deze op het [HYXiPOWER Developer Platform]({link}).",
         "data": {
-          "access_key": "Toegangssleutel (AK)",
-          "secret_key": "Geheime sleutel (SK)"
+          "access_key": "Access Key (AK)",
+          "secret_key": "Secret Key (SK)"
         }
       }
     },
     "error": {
-      "cannot_connect": "Kan geen verbinding maken met de HYXi servers",
-      "invalid_auth": "Ongeldige Toegangssleutel of Geheime sleutel",
-      "unknown": "Er is een onverwachte fout opgetreden"
+      "cannot_connect": "Verbinding met HYXi-servers mislukt",
+      "invalid_auth": "Ongeldige Access Key of Secret Key",
+      "unknown": "Onverwachte fout opgetreden"
     },
     "abort": {
       "already_configured": "Dit HYXi-account is al geconfigureerd.",
@@ -32,43 +32,42 @@
     "step": {
       "init": {
         "title": "HYXi Systeemconfiguratie",
-        "description": "Configureer optionele functies voor uw HYXi-systeem.",
+        "description": "Pas aan hoe uw integratie communiceert met de HYXi Cloud en hoe uw hardware wordt weergegeven.\n\n---",
         "data": {
-          "enable_virtual_battery": "Geaggregeerde virtuele batterij inschakelen (Vereist 2+ batterijen)"
+          "update_interval": "Interval voor gegevensvernieuwing (1-60 minuten, Standaard: 5)",
+          "enable_virtual_battery": "Geaggregeerde virtuele batterij inschakelen (vereist 2+ batterijen)"
         }
       }
     }
   },
   "entity": {
     "binary_sensor": {
-      "connectivity": {
-        "name": "Cloud Status"
-      }
+      "connectivity": { "name": "Cloudstatus" }
     },
     "sensor": {
       "batsoc": { "name": "Batterij Laadstatus" },
       "pbat": { "name": "Batterijvermogen" },
-      "ppv": { "name": "Zonne-energie" },
+      "ppv": { "name": "Zonne-energie vermogen" },
       "home_load": { "name": "Huisverbruik" },
-      "grid_import": { "name": "Net-import" },
-      "grid_export": { "name": "Net-export" },
-      "bat_charging": { "name": "Batterij Opladen" },
-      "bat_discharging": { "name": "Batterij Ontladen" },
-      "totale": { "name": "Totale Energieopbrengst" },
-      "bat_charge_total": { "name": "Totale Batterijlading" },
-      "bat_discharge_total": { "name": "Totale Batterijontlading" },
-      "batsoh": { "name": "Batterij Gezondheid" },
-      "tinv": { "name": "Omvormer Temperatuur" },
-      "collecttime": { "name": "Tijd van Gegevensverzameling" },
-      "last_seen": { "name": "Laatste Cloud-synchronisatie" },
-      "integration_last_updated": { "name": "Laatste Integratie-update" },
-      "battery_system_avg_soc": { "name": "Systeem Batterij Gemiddelde Laadstatus" },
-      "battery_system_avg_soh": { "name": "Systeem Batterij Gemiddelde Gezondheid" },
-      "battery_system_total_pbat": { "name": "Systeem Batterijvermogen" },
-      "battery_system_bat_charging": { "name": "Systeem Batterij Opladen" },
-      "battery_system_bat_discharging": { "name": "Systeem Batterij Ontladen" },
-      "battery_system_bat_charge_total": { "name": "Systeem Totale Batterijlading" },
-      "battery_system_bat_discharge_total": { "name": "Systeem Totale Batterijontlading" }
+      "grid_import": { "name": "Netimport" },
+      "grid_export": { "name": "Netexport" },
+      "bat_charging": { "name": "Batterij opladen" },
+      "bat_discharging": { "name": "Batterij ontladen" },
+      "totale": { "name": "Totale energieopbrengst" },
+      "bat_charge_total": { "name": "Totaal opgeladen batterij" },
+      "bat_discharge_total": { "name": "Totaal ontladen batterij" },
+      "batsoh": { "name": "Batterij Gezondheidstoestand" },
+      "tinv": { "name": "Omvormer temperatuur" },
+      "collecttime": { "name": "Gegevens verzameltijd" },
+      "last_seen": { "name": "Laatste Cloud Sync" },
+      "integration_last_updated": { "name": "Integratie laatst bijgewerkt" },
+      "battery_system_avg_soc": { "name": "Systeem batterij laadstatus gemiddelde" },
+      "battery_system_avg_soh": { "name": "Systeem batterij gezondheid gemiddelde" },
+      "battery_system_total_pbat": { "name": "Systeem batterijvermogen" },
+      "battery_system_bat_charging": { "name": "Systeem batterij opladen" },
+      "battery_system_bat_discharging": { "name": "Systeem batterij ontladen" },
+      "battery_system_bat_charge_total": { "name": "Systeem totaal opgeladen batterij" },
+      "battery_system_bat_discharge_total": { "name": "Systeem totaal ontladen batterij" }
     }
   }
 }
