--- a/custom_components/hyxi_cloud/translations/fr.json
+++ b/custom_components/hyxi_cloud/translations/fr.json
@@ -1,73 +1,98 @@
 {
-  "config": {
-    "step": {
-      "user": {
-        "title": "Se connecter à HYXi Cloud",
-        "description": "Entrez vos identifiants Open API. Vous pouvez les générer sur la [plateforme développeur HYXiPOWER]({link}).",
-        "data": {
-          "access_key": "Clé d'accès (AK)",
-          "secret_key": "Clé secrète (SK)"
-        }
-      },
-      "reauth_confirm": {
-        "title": "Ré-authentifier HYXi Cloud",
-        "description": "Votre clé d'accès ou clé secrète n'est plus valide. Veuillez saisir de nouveaux identifiants pour reprendre le suivi. Vous pouvez les trouver sur la [plateforme développeur HYXiPOWER]({link}).",
-        "data": {
-          "access_key": "Clé d'accès (AK)",
-          "secret_key": "Clé secrète (SK)"
-        }
-      }
-    },
-    "error": {
-      "cannot_connect": "Échec de la connexion aux serveurs HYXi",
-      "invalid_auth": "Clé d'accès ou clé secrète invalide",
-      "unknown": "Une erreur inattendue s'est produite"
-    },
-    "abort": {
-      "already_configured": "Ce compte HYXi est déjà configuré.",
-      "reauth_successful": "La ré-authentification a réussi"
-    }
-  },
-  "options": {
-    "step": {
-      "init": {
-        "title": "Configuration du système HYXi",
-        "description": "Ajustez la communication avec HYXi Cloud et l'affichage de votre matériel.\n\n---",
-        "data": {
-          "update_interval": "Intervalle d'actualisation (1-60 minutes, par défaut : 5)",
-          "enable_virtual_battery": "Activer la batterie virtuelle agrégée (nécessite 2+ batteries)"
-        }
-      }
-    }
-  },
   "entity": {
     "binary_sensor": {
-      "connectivity": { "name": "Statut du Cloud" }
+      "connectivity": {
+        "name": "Statut du Cloud"
+      }
     },
     "sensor": {
-      "batsoc": { "name": "État de charge de la batterie" },
-      "pbat": { "name": "Puissance de la batterie" },
-      "ppv": { "name": "Puissance solaire" },
-      "home_load": { "name": "Consommation maison" },
-      "grid_import": { "name": "Importation réseau" },
-      "grid_export": { "name": "Exportation réseau" },
-      "bat_charging": { "name": "Charge de la batterie" },
-      "bat_discharging": { "name": "Décharge de la batterie" },
-      "totale": { "name": "Production totale" },
-      "bat_charge_total": { "name": "Charge totale batterie" },
-      "bat_discharge_total": { "name": "Décharge totale batterie" },
-      "batsoh": { "name": "État de santé de la batterie" },
-      "tinv": { "name": "Température de l'onduleur" },
-      "collecttime": { "name": "Heure de collecte des données" },
-      "last_seen": { "name": "Dernière synchro Cloud" },
-      "integration_last_updated": { "name": "Dernière mise à jour de l'intégration" },
-      "battery_system_avg_soc": { "name": "Moyenne état de charge batterie système" },
-      "battery_system_avg_soh": { "name": "Moyenne état de santé batterie système" },
-      "battery_system_total_pbat": { "name": "Puissance batterie système" },
-      "battery_system_bat_charging": { "name": "Charge batterie système" },
-      "battery_system_bat_discharging": { "name": "Décharge batterie système" },
-      "battery_system_bat_charge_total": { "name": "Charge totale batterie système" },
-      "battery_system_bat_discharge_total": { "name": "Décharge totale batterie système" }
+      "batsoc": {
+        "name": "Niveau de charge batterie"
+      },
+      "pbat": {
+        "name": "Puissance batterie"
+      },
+      "ppv": {
+        "name": "Puissance solaire (PV)"
+      },
+      "home_load": {
+        "name": "Charge domestique"
+      },
+      "grid_import": {
+        "name": "Importation réseau"
+      },
+      "grid_export": {
+        "name": "Exportation réseau"
+      },
+      "bat_charging": {
+        "name": "Charge batterie en cours"
+      },
+      "bat_discharging": {
+        "name": "Décharge batterie en cours"
+      },
+      "totale": {
+        "name": "Production totale"
+      },
+      "bat_charge_total": {
+        "name": "Charge totale batterie"
+      },
+      "bat_discharge_total": {
+        "name": "Décharge totale batterie"
+      },
+      "batsoh": {
+        "name": "Santé de la batterie (SOH)"
+      },
+      "tinv": {
+        "name": "Température interne"
+      },
+      "collecttime": {
+        "name": "Heure de collecte des données"
+      },
+      "last_seen": {
+        "name": "Dernière synchro cloud"
+      },
+      "batcap": {
+        "name": "Capacité batterie"
+      },
+      "maxchargepower": {
+        "name": "Limite de charge max"
+      },
+      "maxdischargepower": {
+        "name": "Limite de décharge max"
+      },
+      "signalintensity": {
+        "name": "Force du signal Wi-Fi"
+      },
+      "signalval": {
+        "name": "Qualité du signal Wi-Fi"
+      },
+      "wifiver": {
+        "name": "Firmware Wi-Fi"
+      },
+      "commode": {
+        "name": "Mode de communication"
+      },
+      "acp": {
+        "name": "Puissance AC"
+      },
+      "vac": {
+        "name": "Tension AC"
+      },
+      "vpv": {
+        "name": "Tension PV"
+      },
+      "etoday": {
+        "name": "Énergie du jour"
+      },
+      "avg_soc": {
+        "name": "Charge batterie moyenne"
+      },
+      "avg_soh": {
+        "name": "Santé batterie moyenne"
+      },
+      "total_pbat": {
+        "name": "Puissance batterie totale"
+      }
     }
   }
 }
