--- a/custom_components/hyxi_cloud/translations/en.json
+++ b/custom_components/hyxi_cloud/translations/en.json
@@ -92,6 +92,9 @@
       "last_seen": {
         "name": "Last Cloud Sync"
       },
+      "integration_last_updated": {
+        "name": "Integration Last Updated"
+      },
       "batcap": {
         "name": "Battery Capacity"
       },
